- =blocks/block-quote=
- =blocks/source-block=
- =blocks/source-block-emacs-lisp=
- =includes/include=
- =includes/include-min-level=
- =properties/basic-property=
- =quote-with-author-and-time=
- =tex/begin-definition-tex=
- =tex/begin-tex=
- =tex/granule=
- =title=
- =todo-comment=

*** Xmobar

- indicator for network ESSID and quality

- indicator for usage and expected lifetime of battery

** Changed

- commands for showing/hiding secondary monitor now use more
  generic detection mechanism

- default indent in =haskel-mode= is now 2

- =flyspell= no longer enabled in all text modes in Emacs

- =office-monitor-hide= renamed to =monitor-hide-secondary=

- =office-monitor-show= renamed to =monitor-show-secondary=

- XScreenSaver disabled

** Fixed

- crash/partially initialised config when loading Emacs
  without =agda-mode= installed

- incorrect bindings for =haskell-mode= (was using =ghc-*=) in
  Emacs

- repository for Solarized with Emacs

*** Installer

- not detecting distribution when there were non-word
  characters after the name

- not recognising linked files as the same when paths
  contained more than one level of symbolic link

** Removed

- =as= and =ash= aliases for aptitude-related programs
- =C-p= binding for =helm-find-files= in Emacs

* 0.10.0 - 2019-11-12

** Added

- shell command for testing microphone

*** Emacs

- confirmation when quitting Emacs

- =helm-org= dependency

- support for viewing next actions categorised by energy

- =transient= as new configuration dependency

**** org-brain

- binding for jumping to friend items (=gf=)
- binding for jumping to history items (=gh=)
- binding for jumping to pinned items (=gp=)
- new academic brain
- support for switching brains via =SPC o B=

*** Installer

- new =with_default_config= helper for installing a program
  with the default configuration

- support for AUR packages
  - installation
  - query latest version

- support for new commands for Arch Linux configuration